--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,38 @@
 	font-size:18px;
 	font-weight:bold;
 }
+
+.upgradesButton {
+    border-radius:5px;
+	border:1px solid #566963;
+    display:inline-block;
+    background-color:#768d87;
+    cursor:pointer;
+}
+
+.upgradesButton .upgradeToolTip {
+    visibility: visible;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+.upgradesButton:hover .upgradeToolTip {
+    visibility: hidden;
+}
+
+#upgradesMenu {
+    border-radius:5px;
+	border:1px solid #566963;
+    display:none;
+    background-color:#768d87;
+    width: 5%;
+}
