--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,13 @@
     cursor:pointer;
     -moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;
 }
+.upgradesButton:hover {
+	background-color:#51b2db;
+}
+.upgradesButton:active {
+	position:relative;
+	top:1px;
+}
 
 #upgradesMenu {
     border-radius:5px;
@@ -62,36 +69,5 @@
     background-color:#944708;
 	width: 10%;
 	text-align: center;
-}
-
-#menu {
-    border-radius:5px;
-	border:1px solid #566963;
-    display:block;
-    background-color:#05d686;
-    width: 10%;
-}
-
-.menuButton {
-	background-color:#93b4ed;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	border:1px solid #4e6096;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:16px;
-	padding:7px 31px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #283966;
-}
-.menuButton:hover {
-	background-color:#476e9e;
-}
-.menuButton:active {
-	position:relative;
-	top:1px;
 }
 
